[package]
name = "alone_ee"
version = "1.7.2"
authors = ["master <alxe.master@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Small event emitter for rapid development of weak dependency in applications. simple. powerful. predicted"
documentation = "https://docs.rs/alone_ee"
repository = "https://github.com/aliaksandr-master/alone_ee"
keywords = ["event", "emitter", "ee", "publish", "subscribe"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odds = { version = "0.3", features = ["std-vec"] }

[dev-dependencies]
criterion = "=0.3.0"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false
